# Vision-app

./: accounts.py  assistant.py  encryptionM.py  games.py  main.py  pyproject.toml  saved.py  saved.txt  thing.py
Chats/: You=Webbop
Store/Game/: info.py
ThoughtsNet/: thoughts.txt
